# schematic-Editor-for-ngspice

./: .gitignore  CMakeLists.txt
doc/: README.md  block.txt  pictures.odp  test.c  未命名 1.odg
doc/test/: array.c  hidtest.c  test.c
src/: CMakeLists.txt  MainScreen.c  SecondScreen.c  array.h  event.c  event.h  main.c  netparse.c  netparse.h  sch.c  sch.h  schElementSelector.c  schElementSelector.h  schgrid.c  schgrid.h
src/cmake/: sdl2-config.cmake  sdl2-img-ttf-mixer.cmake
src/include/: cJSON.c  game.c  game.h
src/test/: testgeometry.c
src/ui/: Button.c  SelectMenu.c  Widget.c  Widget.h  font.c.txt  mapfont.c  mapfont.h
